# tweepy_sailor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: config_template.py  download_image.py  get_args.py  get_logger.py  hello_tweepy.py
