[tool.poetry]
name = "tweepy_sailor"
version = "0.1.0"
description = ""
authors = ["rokkish <thehiro117@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
tweepy = "^4.13.0"
mypy = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = "True"
    